hphp/test/slow/finally/try_finally_005.php.expectf

Fatal error: An expression is expected here. in %s/try_finally_005.php on line 11
